Updated headers + CMake test

--- a/.gitignore
+++ b/.gitignore
@@ -32,12 +32,7 @@
 *.app
 
 ### VisualStudioCode ###
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-*.code-workspace
+.vscode/
 
 # Local History for Visual Studio Code
 .history/
@@ -46,3 +41,6 @@
 # Ignore all local history of files
 .history
 .ionide
+
+# CMake build files
+build/
