--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,3 @@
 project(Randomizer_Game)
 
-add_executable(${PROJECT_NAME} Player.hpp Armor.hpp Weapon.hpp main.cpp Player.cpp)
+add_executable(${PROJECT_NAME} Player.hpp Armor.hpp Weapon.hpp main.cpp)
