--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(Randomizer_Game)
 
-add_executable(${PROJECT_NAME} Player.hpp Hero.hpp Enemy.hpp Armor.hpp Weapon.hpp main.cpp)
+add_executable(${PROJECT_NAME} Player.hpp Hero.hpp Enemy.hpp Armor.hpp Weapon.hpp exceptions.hpp main.cpp)
 
 if ( CMAKE_COMPILER_IS_GNUCC )
     set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -std=c++11")
