--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 project(Randomizer_Game)
 
-add_executable(${PROJECT_NAME} Player.hpp Hero.hpp Enemy.hpp Armor.hpp Weapon.hpp exceptions.hpp main.cpp)
+add_executable(${PROJECT_NAME} main.cpp)
 
-if ( CMAKE_COMPILER_IS_GNUCC )
-    set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -std=c++11")
+if(MSVC)
+    add_compile_options("/W4")
+else()
+    add_compile_options("-Wall" "-Wextra" "-pedantic" "-g" "-std=c++11")
 endif()
