--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,13 @@ cmake_minimum_required(VERSION 3.21)
 
 add_executable(${PROJECT_NAME} main.cpp)
 
+set(CMAKE_CXX_STANDARD 17)
+
 if(MSVC)
     add_compile_options("/W4")
 else()
-    add_compile_options("-Wall" "-Wextra" "-pedantic" "-g" "-std=c++17")
+    add_compile_options("-Wall" "-Wextra" "-pedantic" "-g")
+    if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+        add_compile_options("-stdlib=libstdc++")
+    endif()
 endif()
